# bm_compiler

./: .gitignore  CMakeLists.txt  README.md  TODO.md  lexer.cpp  main.bm  main.cpp  make_build  parser.cpp  tester.cpp
inc/analyzer/: semanticAnalyzer.h  symbolTable.h
inc/ast/: astNode.h  astVisitor.h
inc/generator/: codeGenerator.h  irGenerator.h
inc/lexer/: lexer.h
inc/parser/: parser.h
src/analyzer/: semanticAnalyzer.cpp  symbolTable.cpp
src/ast/: astNode.cpp
src/generator/: codeGenerator.cpp  irGenerator.cpp
src/lexer/: lexer.cpp
src/parser/: parser.cpp
tests/: test_parser.cpp
